--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,20 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +12,30 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.select-box{
+  margin: 15px 15px;
+}
+.select-box span{
+  margin: 15px 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table, th, td {
+  border: 1px solid;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td, th{
+  padding: 5px;
+}
+
+th{
+  background-color: grey;
+}
+
+.App-link {
+  color: #61dafb;
 }
